force-app/main/default/objects/Class__c/fields/Booked_Slots__c.field-meta.xml
<CustomField>
    <fullName>Booked_Slots__c</fullName>
    <label>Booked Slots</label>
    <summaryForeignKey>Booking__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>