force-app/main/default/objects/Class__c/fields/Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Type__c</fullName>
    <label>Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Specialization</valueSetName>
    </valueSet>
</CustomField>