force-app/main/default/objects/Class__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <type>DateTime</type>
</CustomField>